syntax = "proto3";

option csharp_namespace = "AuthServices";

service AuthService{
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  string role = 3;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}